--- a/_posts/2023-04-20-first.md
+++ b/_posts/2023-04-20-first.md
@@ -6,6 +6,8 @@ title:  "BGM Reference for YouTube Video : Guts King"
 
 Nowadays, as content platforms like TikTok and YouTube become more common, being a creator seems to be essential for everyone. As more videos are created, the demand for background music has also increased. More and more creators are using Sellbuymusic's music as background music.
 
+![Alt text](../_images/firstimage.jpg)
+
 Let's take a look at some of them and see which ones are used in which videos.
 
 The creator I'm going to introduce to you is “Guts King GMT" - which is "근성왕 겜마톡" in Korean. He's a South Korean gaming YouTube creator with 260,000 subscribers whose main content is Minecraft. He's especially known for large-scale structures that are only possible in the imagination. This time, he took on the challenge of building a “1 million cubic meter whale island in the wild.“
