--- a/_posts/2023-04-20-first.md
+++ b/_posts/2023-04-20-first.md
@@ -6,7 +6,7 @@ title:  "BGM Reference for YouTube Video : Guts King"
 
 Nowadays, as content platforms like TikTok and YouTube become more common, being a creator seems to be essential for everyone. As more videos are created, the demand for background music has also increased. More and more creators are using Sellbuymusic's music as background music.
 
-![Alt text](../_images/firstimage.jpg)
+![GMT image](../_images/firstimage.jpg)
 
 Let's take a look at some of them and see which ones are used in which videos.
 
