--- a/_posts/2023-04-20-first.md
+++ b/_posts/2023-04-20-first.md
@@ -13,6 +13,8 @@ Let's take a look at some of them and see which ones are used in which videos.
 
 The creator I'm going to introduce to you is “Guts King GMT" - which is "근성왕 겜마톡" in Korean. He's a South Korean gaming YouTube creator with 260,000 subscribers whose main content is Minecraft. He's especially known for large-scale structures that are only possible in the imagination. This time, he took on the challenge of building a “1 million cubic meter whale island in the wild.“
 
+{% include First.md.html id="https://www.youtube.com/watch?v=hUjFqLy4wEc&t=485s" %}  
+
 https://www.youtube.com/watch?v=hUjFqLy4wEc&t=485s
 
 The BGM used in this video is "Uplifting Motivational 2". As the title suggests, it's a perfect song to express a grand and upbeat atmosphere. So if you're looking for something like that, try it out :D You can listen to the song at the link below.
