유튜브 링크 삽입 크게

--- a/_posts/2023-04-20-first.md
+++ b/_posts/2023-04-20-first.md
@@ -13,7 +13,9 @@ Let's take a look at some of them and see which ones are used in which videos.
 
 The creator I'm going to introduce to you is “Guts King GMT" - which is "근성왕 겜마톡" in Korean. He's a South Korean gaming YouTube creator with 260,000 subscribers whose main content is Minecraft. He's especially known for large-scale structures that are only possible in the imagination. This time, he took on the challenge of building a “1 million cubic meter whale island in the wild.“
 
-{% include First.md.html id="https://www.youtube.com/watch?v=hUjFqLy4wEc&t=485s" %}  
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hUjFqLy4wEc?start=486" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+
+
 
 https://www.youtube.com/watch?v=hUjFqLy4wEc&t=485s
 
