인트로 문장 수정

--- a/_posts/2023-04-20-first.md
+++ b/_posts/2023-04-20-first.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "BGM Reference for YouTube Video : Guts King"
 ---
-#Nowadays, as content platforms like TikTok and YouTube become more common, being a creator seems to be essential for everyone.
+BGM Reference for YouTube Video : Guts King
 
 Nowadays, as content platforms like TikTok and YouTube become more common, being a creator seems to be essential for everyone. As more videos are created, the demand for background music has also increased. More and more creators are using Sellbuymusic's music as background music.
 
