영문링크로 수정

--- a/_posts/2023-04-20-second.md
+++ b/_posts/2023-04-20-second.md
@@ -40,4 +40,4 @@ title:  "Understanding Copyright: What Are Intellectual Property Rights?"
 
 <div style="text-align: center;">Royalty Free Music</div>
 <div style="text-align: center;">SELLBUYMUSIC</div>
-<div style="text-align: center;"><a title="" target="_blank" href="https://en.sellbuymusic.com/">https://jp.sellbuymusic.com/<br /></a><br />
+<div style="text-align: center;"><a title="" target="_blank" href="https://en.sellbuymusic.com/">https://en.sellbuymusic.com/<br /></a><br />
