--- a/_posts/2023-04-25-FreeSo4.md
+++ b/_posts/2023-04-25-FreeSo4.md
@@ -10,14 +10,15 @@ title: "[🎵Free Background Music] Why should I do that? - So4"
 <p>Please give a lot of love and attention to artist So4's 'Why should I do that?'</p>
 <p>#artist #So4 #WhyshouldIdothat? #albumrelease</p>
 <h3>Why should I do that? - Album Jacket Photo</h3>
-![무료_프로모션_so4](../images/2023-04-25-FreeSo4/무료_프로모션_so4.jpg)
+![so4_아티스트_이미지](C:\Users\nowgnues\Documents\sellbuymusic.github.io\sellbuymusic.github.io\images\2023-04-25-FreeSo4\so4_아티스트_이미지.png)
 <h3>Introduction of the Song 'Why Should I Do That?'</h3>
 <p>It is a boom bap old-school genre created with So4's emotions.</p>
 <a href="https://en.sellbuymusic.com/musicDetail/24745">https://en.sellbuymusic.com/musicDetail/24745</a>
+
 <h3>Credit</h3>
 <p>Composition, arrangement - So4</p>
 <h3>Artist - So4</h3>
-![so4_아티스트_이미지](../images/2023-04-25-FreeSo4/so4_아티스트_이미지.png)
+![무료_프로모션_so4](C:\Users\nowgnues\Documents\sellbuymusic.github.io\sellbuymusic.github.io\images\2023-04-25-FreeSo4\무료_프로모션_so4.jpg)
 
 <h2>Download 'Why Should I Do That?' for Free Right Now at SellBuyMusic🤎</h2>
 <p>Artist So4's "Why should I do that?" is available for free download from 📁 04/13 - 04/26. Don't miss out!</p>
