--- a/_posts/2023-04-20-first.md
+++ b/_posts/2023-04-20-first.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title:  "BGM Reference for YouTube Video : Guts King"
+categories: BGM Reference
+sidebar:
+    nav: "counts"
 ---
 BGM Reference for YouTube Video : Guts King
 
