수정 사항 반영

--- a/_posts/2023-04-20-second.md
+++ b/_posts/2023-04-20-second.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  "Understanding Copyright: What Are Intellectual Property Rights?"
+sidebar:
+    nav: "counts"
 ---
 
 <h1>Understanding Copyright: What Are Intellectual Property Rights?</h1>
