--- a/_posts/2023-04-25-FreeSo4.md
+++ b/_posts/2023-04-25-FreeSo4.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: "[🎵Free Background Music] Why should I do that? - So4"
+sidebar:
+    nav: "counts"
 ---
 <h2>Groove to the Old-School Boom Bap Beats of So4's Latest Single!</h2>
 <p>Hello everyone. This is BGM market, SellBuyMusic.</p>
