이미지 변경, 제목 수정

--- a/_posts/2023-06-09-Suzume.md
+++ b/_posts/2023-06-09-Suzume.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "[🎼Playlist] Movie <Suzume>🚪ㅣOrchestra, animation BGM"
+title:  "[🎼Playlist] Movie "Suzume"🚪ㅣOrchestra, animation BGM"
 categories: BGM Playlist
 tag: [Playlist, Orchestra, Animation]
 sidebar:
