--- a/_posts/2023-06-09-Suzume.md
+++ b/_posts/2023-06-09-Suzume.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "[🎼Playlist] Movie "Suzume"🚪ㅣOrchestra, animation BGM"
+title:  "[🎼Playlist] Movie 'Suzume' 🚪ㅣOrchestra, animation BGM"
 categories: BGM Playlist
 tag: [Playlist, Orchestra, Animation]
 sidebar:
@@ -9,7 +9,7 @@ sidebar:
 <p>The film &quot;Suzume&quot; is an animated movie directed by Makoto Shinkai, known for &quot;Your Name&quot; and &quot;Weathering with You.&quot; It tells the story of Suzume, who accidentally opens a door that triggers disasters and desperately tries to close them to prevent further calamities occurring throughout Japan.</p>
 <p>Today, we have prepared a playlist featuring SELLBUYMUSIC background music that resembles the OST of the movie, along with memorable quotes from &quot;Suzume&quot;</p>
 <p>&nbsp;</p>
-<p><img src="/images/2023-06-09-Suzume/20230609suzume.jpg" alt="[image1] movie poster - suzume "></p>
+<p><img src="/images/2023-06-09-Suzume/20230609Suzume.jpg" alt="[image1] movie poster - suzume "></p>
 <p><strong>[Memorable Quotes from &quot;Suzume&quot;]</strong></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6c4GAIig9gY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p>Our greatest underground god!</p>
