플리 링크 추가

--- a/_posts/2023-06-09-Suzume.md
+++ b/_posts/2023-06-09-Suzume.md
@@ -19,6 +19,8 @@ sidebar:
 <p>&nbsp;</p>
 <p><strong>[SELLBUYMUSIC Weekly Playlist]</strong></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/m8oGFxrxDoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<p>&quot;Movie Suzume🚪ㅣOrchestra, animation BGM&quot;</p>
+<p><a href='https://en.sellbuymusic.com/albumDetail/232' target='_blank' class='url'>https://en.sellbuymusic.com/albumDetail/232</a></p>
 <ol>
 <li>secret garden - SD Rain</li>
 <li>a tragic opera - So4</li>
