--- a/_posts/2023-06-15-Kissday.md
+++ b/_posts/2023-06-15-Kissday.md
@@ -6,7 +6,7 @@ tag: [Playlist, Romantic]
 sidebar:
    nav: "counts"
 ---
-<p>Hello, This is Royalty-Free Music, SellByMusic!</p>
+<p>Hello, This is Royalty-Free Music, SellBuyMusic!</p>
 <p><img src="\images\2023-06-15-Kissday\20230615kissday.jpg" alt="[image1] Kiss day - sellbuymusic"></p>
 <p>There are various origins of Kiss Day. However, the most popular explanation is that it originated from a cute prank between a couple. When she asked, &quot;Are there any special days in June?&quot; he kissed her and jokingly said, &quot;Kiss Day.&quot;</p>
 <p>Because of this romantic story, June 14th has become a day for lovers to confirm their feelings for each other through kisses. Isn&#39;t it romantic?</p>
